# llvm-kaleidoscope

./: CMakeLists.txt
.cache/clangd/index/: BinaryExprAST.cpp.BA126BFE3B386770.idx  BinaryExprAST.h.D5B9B7538EBC4056.idx  CallExprAST.cpp.79D9BE2ACFE3BA5B.idx  CallExprAST.h.291079F617A5933B.idx  ExprAST.h.8B1A3BD45C5E4DC5.idx  FunctionAST.cpp.E86D9FB3E9D81ECA.idx  FunctionAST.h.54AF52EB0F841659.idx  NumberExprAST.cpp.6D60150952A8F2CD.idx  NumberExprAST.h.277659C9EFB994BE.idx  PrototypeAST.cpp.C20A85B304F823AF.idx  PrototypeAST.h.5D674965BF553DCD.idx  VariableExprAST.cpp.8D330DB87DD3AD04.idx  VariableExprAST.h.5E7F018C85DF451B.idx  kaleidoscope.cpp.483BCA820224887B.idx  kaleidoscope.h.9D8A81BC2D196162.idx  lexer.cpp.9D18442E5FE0D6EA.idx  lexer.h.53D140F952F5679C.idx  logger.cpp.3C3025484AB9EB4F.idx  logger.h.66847E604F060C85.idx  main.cpp.81B7B1078C85030A.idx  parser.cpp.3FF94A4B367E7990.idx  parser.h.7AF88C06473217FD.idx  token.h.283BB79FB0EDB497.idx
include/ast/: BinaryExprAST.h  CallExprAST.h  ExprAST.h  FunctionAST.h  IfExprAST.h  NumberExprAST.h  PrototypeAST.h  VariableExprAST.h
include/kaleidoscope/: kaleidoscope.h  kaleidoscopeJIT.h
include/lexer/: lexer.h  token.h
include/logger/: logger.h
include/parser/: parser.h
src/: main.cpp
src/ast/: BinaryExprAST.cpp  CallExprAST.cpp  FunctionAST.cpp  IfExprAST.cpp  NumberExprAST.cpp  PrototypeAST.cpp  VariableExprAST.cpp
src/kaleidoscope/: kaleidoscope.cpp
src/lexer/: lexer.cpp
src/logger/: logger.cpp
src/parser/: parser.cpp
